ci: Update GitHub workflows for fast-forwarding and branch reset
- Modified fast-forwarding.yml to allow the workflow to run without checking the branch name.
- Enhanced reset-develop-on-main-release.yml by adding a base_branch parameter for better flexibility.

--- a/.github/workflows/reset-develop-on-main-release.yml
+++ b/.github/workflows/reset-develop-on-main-release.yml
@@ -16,3 +16,4 @@ jobs:
         uses: nicksnell/action-reset-repo@master
         with:
           reset_branch: develop
+          base_branch: main
