ci: Update reset-develop-on-main-release.yml to include GitHub token
- Added github_token parameter to enhance authentication for the reset action.

--- a/.github/workflows/reset-develop-on-main-release.yml
+++ b/.github/workflows/reset-develop-on-main-release.yml
@@ -17,3 +17,4 @@ jobs:
         with:
           reset_branch: develop
           base_branch: main
+          github_token: ${{ secrets.GITHUB_TOKEN }}
