ci: Enhance fast-forwarding workflow with branch reset action
- Added a step to reset the develop branch to match the main branch using nicksnell/action-reset-repo.
- Included github_token for authentication during the reset process.

--- a/.github/workflows/fast-forwarding.yml
+++ b/.github/workflows/fast-forwarding.yml
@@ -24,3 +24,10 @@ jobs:
           # never post a comment.  (In all cases the information is
           # still available in the step's summary.)
           comment: always
+  
+      - name: Reset develop branch to main
+        uses: nicksnell/action-reset-repo@master
+        with:
+          reset_branch: develop
+          base_branch: main
+          github_token: ${{ secrets.GITHUB_TOKEN }}
